# resilient-api

./: README.md  main.py  pyproject.toml
.github/workflows/: ci-tests.yml  external-integration.yml  k8s-tests.yml  quality.yml
core/: normalizers.py  validators.py
mockapi_client/: async_client.py  async_decorators.py  client.py  config.py  decorators.py  factory.py  logger.py
tests/: conftest.py  test_contract.py  test_scenario.py  test_user_async_burst_create.py  test_user_async_burst_workflow.py  test_user_async_contract.py  test_user_async_edge_single.py  test_user_async_edge_workflow.py  test_user_concurrency_threads.py  test_user_concurrent_async_conflict.py  test_user_concurrent_async_creation.py  test_user_contract.py  test_user_negative.py  test_user_scenario.py
